# anotator

./: .dockerignore  .env.example  .gitignore  package.json  pnpm-lock.yaml  start.ps1  start.sh  stop.ps1  stop.sh
backend/: Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_frame_workflow_states.py  0002_review_annotations.py
backend/app/: __init__.py  main.py  models.py  schemas.py  tasks.py
backend/app/api/: deps.py  project_scope.py
backend/app/api/v1/: artifacts.py  audit.py  auth.py  cvat.py  derived_assets.py  health.py  imports.py  inference.py  jobs.py  labels.py  models.py  pipeline_definitions.py  pipelines.py  projects.py  releases.py  review.py  router.py  system.py  tasks.py  (+2 more)
backend/app/core/: auth.py  celery_app.py  config.py
backend/app/services/: annotations.py  artifacts.py  compute.py  cvat_client.py  datasets.py  frame_previews.py  imports.py  inference.py  jobs.py  json_safety.py  pipelines.py  project_cleanup.py  project_storage.py  releases.py  security.py  sync.py  tasks.py  training.py
backend/tests/: test_artifacts_service.py  test_auth_security.py  test_celery_app.py  test_compute.py  test_cvat_client.py  test_cvat_sync.py  test_dataset_releases.py  test_frame_previews.py  test_health.py  test_import_duplicates.py  test_inference_suggestions.py  test_jobs_service.py  test_pipelines.py  test_projects.py  test_review_decisions.py  test_schemas.py  test_system_directories.py  test_task_deletion.py  test_training_service.py  test_yolo_dataset.py
(+77 files in other folders)
