[project]
name = "anotator-backend"
version = "0.1.0"
description = "FastAPI backend for CVAT orchestration, review, releases, training and pipelines."
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.14.0",
  "boto3>=1.35.0",
  "celery>=5.4.0",
  "cvat-sdk>=2.34.0",
  "fastapi>=0.115.0",
  "httpx>=0.28.0",
  "mlflow>=3.0.0",
  "pillow>=10.4.0",
  "psycopg[binary]>=3.2.0",
  "pydantic>=2.10.0",
  "pydantic-settings>=2.7.0",
  "python-multipart>=0.0.20",
  "redis>=5.2.0",
  "sqlalchemy>=2.0.36",
  "ultralytics>=8.3.0",
  "uvicorn[standard]>=0.34.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-cov>=6.0.0",
  "ruff>=0.8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
